SERVER-37496 Register balancer shutdown task when MongoD is single-threaded